Sloved chats overlapping bug

--- a/src/components/messages-page/messages.css
+++ b/src/components/messages-page/messages.css
@@ -317,7 +317,7 @@
     border-bottom: 1px solid #eee;
     text-align: center;
     background-color: white;
-    height: 340px;
+    height: 250px;
     padding: 20px 16px;
     margin-bottom: 16px;
     display: flex;
